--- a/app/assets/styles/modules/_drum-pad.css
+++ b/app/assets/styles/modules/_drum-pad.css
@@ -2,6 +2,7 @@
   display: inline-flex;
   width: 10px;
   height: 10px;
+  margin: 0 auto;
   padding: 2rem;
   border: 1px #EB5E28 solid;
   border-radius: 50%;
