--- a/app/assets/styles/modules/_drum-pad.css
+++ b/app/assets/styles/modules/_drum-pad.css
@@ -17,7 +17,7 @@
     1px 1px 2px rgba(000,000,000,0.5),
     0px 1px 0px rgba(255,255,255,0.4);
 
-  &:hover {
+  &:active {
     box-shadow: none;
     background-image: linear-gradient(to bottom, rgba(239, 169, 140, 0.97), #EB5E28);
   }
