--- a/app/assets/styles/modules/_controls.css
+++ b/app/assets/styles/modules/_controls.css
@@ -11,8 +11,58 @@
 
   &__label {
     display: block;
-    margin-top: 0;
+    margin-top: 10px;
+    margin-bottom: 4px;
     font-weight: 200;
+  }
+
+  &__powerToggle {
+    position: relative;
+    display: inline-block;
+    width: 34px;
+    height: 20px;
+
+    input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    input:checked + .controls__powerToggleSlider {
+      background-color: #2196F3;
+    }
+
+    input:focus + .controls__powerToggleSlider {
+      box-shadow: 0 0 1px #2196F3;
+    }
+
+    input:checked + .controls__powerToggleSlider:before {
+      transform: translateX(16px);
+    }
+  }
+
+  &__powerToggleSlider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: #ccc;
+    border-radius: 20px;
+    transition: .4s;
+
+    &:before {
+      position: absolute;
+      content: '';
+      width: 16px;
+      height: 16px;
+      left: 2px;
+      bottom: 2px;
+      background-color: white;
+      border-radius: 50%;
+      transition: .4s;
+    }
   }
 
   &__vol {
