Update url paths for assets

--- a/app/assets/styles/modules/_controls.css
+++ b/app/assets/styles/modules/_controls.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Digital Readout Upright";
-  src: url('/assets/fonts/DIGIRU__.ttf');
+  src: url('assets/fonts/DIGIRU__.ttf');
 }
 
 .controls {
